--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,33 @@
     --button-background: #F5F4FA;
 }
 
-/* Общие стили для тега боди */
+/* Глобальные стили */
+html {
+    box-sizing: border-box;
+}
+
 body{
     font-family: Roboto, sans-serif;
     color: var(--main-text-color)
+}
+
+
+/* Утилитные стили */
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+/* Стили для обнуления верхних отступов у элементов */
+h1,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
 }
 
 
@@ -32,6 +55,16 @@ ul {
     list-style: none;
 
 }
+
+/* HADER */
+.container {
+    display: flex;
+    width: 1200px;
+    padding: 0 15px;
+    /* outline: 1px dotted red; */
+    align-items: center;
+}
+
 .logo {   
         font-family: 'Raleway';
         font-weight: 700;
@@ -40,22 +73,44 @@ ul {
         letter-spacing: 0.03em;
         color: var(--brend-color);
         text-decoration: none;
+        margin-right: 93px;
 }
-/* HADER */
+
 .link {
     text-decoration: none;
 }
 /* Навигация */
+.site-nav {
+    padding: 0;
+}
+.nav-container {
+    display: flex;
+    padding-left: 0;
+    gap: 50px;
+}
+/* Вариант пробелов между лишками навигации, 
+но гап удобнее
+.nav-container li:not(:last-child) {
+    margin-right: 50px;
+} */
+
 .site-nav a {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+    padding: 20px 0;
 }
 
 .site-nav .link.current {
     color: var(--brend-color);
+}
+
+.auth-header {
+    display: flex;
+    margin-left: auto;
+    gap: 50px;
 }
 
 .auth-link {
@@ -71,7 +126,41 @@ ul {
     color: var(--brend-color);
 }
 
+.botton-line {
+    border-bottom: 1px solid #ececec;
+}
+
+/* Область кнопок фильтров */
+
+/* Визуальное скрытие заголовка ПОРТФОЛИО */
+.visually-hidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+    clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+}
+
+.filter-button-list {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin: 0;
+    padding-top: 94px;
+}
+
+
 .filter-button {
+    border: none;
+    border-radius: 4px;
+    padding: 6px 24px;
+
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -79,7 +168,7 @@ ul {
     letter-spacing: 0.03em;
     color: var(--main-text-color);
     background-color: var(--button-background);
-    cursor: pointer;
+    cursor: pointer;    
 }
 
 .filter-button.filter:hover,
@@ -89,6 +178,14 @@ ul {
     color: #fff;
 }
 /* Область карточек */
+.filter-cards {
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 0;
+    padding-top: 34px;
+    padding-bottom: 94px;
+}
+
 .card-title {
 font-weight: 700;
 font-size: 18px;
@@ -105,7 +202,10 @@ color: var(--main-text-color);
 }
 
 /* Footer */
-
+.footer-column {
+    flex-direction: column;
+    padding-top: 60px;
+}
 .background-footer {
     background-color: var(--footer-color);
 }
@@ -115,6 +215,9 @@ color: var(--main-text-color);
     text-decoration: none;
 }
 
+.adress-padding{
+    padding-left: 0;
+}
 .adress {
     font-size: 14px;
     line-height: 1.7;
@@ -138,17 +241,34 @@ color: var(--main-text-color);
 
 /* index.html MAIN*/
 /* кнопка героя */
-.hero {
+
+.hero-section {
+        display: block;
+        width: 1200px;
+        height: 600px;
+        background-color: #2F303A;
+        padding: 0 15px;
+}
+
+.hero-text {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.4;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--white);
-    background-color: #2F303A;
+    
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 30px;
+    margin: 0;
+
 }
 
 .hero-button {
+    display: block;
+    margin: 0 auto;
+
     font-family: inherit;
     background-color: var(--brend-color);
     font-weight: 700;
@@ -158,7 +278,24 @@ color: var(--main-text-color);
     color: var(--white);
     cursor: pointer;
 }
+
 /* преимущества */
+.advanteges-list {
+    display: flex;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.advanteges-width {
+    width: 270px;
+}
+
+
+.advanteges:not(:last-child) {
+     margin-right: 30px;
+}
+
+
 .advanteges-h2 {
     font-weight: 700;
     font-size: 14px;
@@ -176,11 +313,25 @@ color: var(--main-text-color);
 }
 
 .info-heading {
+    margin-bottom: 50px;
+    /* padding-top: 94px; */
+
+
     font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
+}
+
+.info-column {
+    flex-direction: column;
+}
+
+.info-link {
+    display: flex;
+    margin: 0;
+    padding-bottom: 94px;
 }
 
 .our-team-h3 {
@@ -196,4 +347,20 @@ color: var(--main-text-color);
     line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--second-text-color);
+}
+
+.bcg {
+    background-color: #F5F4FA;;
+}
+
+.team-column {
+    flex-direction: column;
+
+}
+
+.team-list {
+    display: flex;
+    margin: 0;
+    padding-bottom: 94px;
+    padding-left: 0;
 }
