--- a/css/styles.css
+++ b/css/styles.css
@@ -55,8 +55,6 @@ ul {
     list-style: none;
 
 }
-
-/* HADER */
 .container {
     display: flex;
     width: 1200px;
@@ -66,6 +64,8 @@ ul {
     margin-left: auto;
     margin-right: auto;
 }
+
+/* HADER */
 
 .logo {   
         font-family: 'Raleway';
@@ -150,7 +150,7 @@ ul {
 }
 
 .filter-list {
-    display:block;
+    flex-direction: column;
 }
 
 .filter-button-list {
@@ -210,6 +210,7 @@ color: var(--main-text-color);
 /* Footer */
 .footer-column {
     flex-direction: column;
+    align-items: flex-start;
     padding-top: 60px;
 }
 .background-footer {
@@ -250,10 +251,10 @@ color: var(--main-text-color);
 
 .hero-section {
         display: block;
-        width: 1200px;
+        /* width: 1200px; */
         height: 600px;
         background-color: #2F303A;
-        padding: 0 15px;
+        /* padding: 0 15px; */
 }
 
 .hero-text {
