--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,11 @@ ul {
     padding: 32px 0;
 }
 
+.link:hover,
+.link:focus {
+    color: var(--brend-color);
+}
+
 .site-nav .link.current {
     color: var(--brend-color);
 }
@@ -262,7 +267,7 @@ ul {
 
 .hero-section {
     background-color: #2F303A;
-    padding: 200px;
+    padding: 200px 0;
 }
 
 .hero-text {
@@ -337,9 +342,9 @@ ul {
 
 .info-link {
     display: flex;
-    margin: 0;
+    /* margin: 0;
     padding-left: 0;
-    padding-bottom: 94px;
+    padding-bottom: 94px; */
     gap: 30px;
 }
 
@@ -350,7 +355,6 @@ ul {
     letter-spacing: 0.03em;
     color: var(--main-text-color);
     text-align: center;
-    margin-top: 30px;
 }
 
 .our-team-p {
@@ -362,14 +366,19 @@ ul {
     margin-top: 10px;
 }
 
-.bcg {
+.team-wrapper {
+    padding: 30px 0;
+}
+
+.bgc {
     background-color: #F5F4FA;;
+}
+
+.bgc-cards {
+    background-color: var(--white);
 }
 
 .team-list {
     display: flex;
-    margin: 0;
-    padding-bottom: 94px;
-    padding-left: 0;
     gap: 30px;
 }
